# serialAssistant

./: .gitignore  README.md
code/: CMakeLists.txt  main.cpp  res.rc
code/inc/: DataWidget.h  MainWindow.h  PIDWidget.h  Serial.h  SettingGroup.h
code/src/: DataWidget.cpp  MainWindow.cpp  PIDWidget.cpp  Serial.cpp  SettingGroup.cpp
example/: .cproject  .mxproject  .project  CMakeLists.txt  example.ioc  example.xml  stlink.cfg
example/Core/Src/: main.c  tim.c
example/UserApp/: common_inc.h  main.cpp
example/UserApp/OLED/: OLED.c  OLED.h
example/UserApp/serial/: Serial.cpp  Serial.h  serial.cpp  serial.h
